# FifthPracticeBucket

./: HTMLPrac.html  README.md  ThatTextFile.txt  hello_arm.c
AJAXPrac/: index.html  lesson1.js
AndrewNgDeepLearning/: Building_your_Deep_Neural_Network_Step_by_Step_v8a.ipynb  Logistic_Regression_with_a_Neural_Network_mindset_v6a.html  Planar_data_classification_with_onehidden_layer_v6c.html  Python_Basics_with_Numpy.ipynb
AndroidARPresentation/: build.gradle  settings.gradle
AndroidPresentation/: settings.gradle
AngularHTTPInterceptor/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
AngularNElectron/: README.md
AngularTokenInterceptor/: README.md
AzureIndexing/: README.md  index.js  package-lock.json  package.json
AzurePrac/: AzureScript.azcli
BunkerBeacon/: build.gradle  settings.gradle
C#Prac/: C#Prac.csproj  Program.cs  README.md  SomeClass.cs
C++OpenCV/: opencvtest  opencvtest.cpp
C++Prac/: VectorPractice.cpp  helloagain.cpp  vector.cpp
CharacterController/: Assembly-CSharp.csproj  CharacterController.sln
CloudFoundryPrac/: README.md
DaggerPracOnMyOwn/: README.md  settings.gradle
DevcloudStuff/: run_vector_add.sh  vector-add-n-sub.cpp
FirebasePrac/: settings.gradle
FromTheBeginningC++/: MyExecutable
GMapStuff/: README.md
GoAgain/: main.go
GoNMongoDB/: go.mod  main.go
GoPrac/: Dockerfile
GorkBench/: README.md  go.mod  hello-world.go
HelpWithJava/: Printer.java
OpenCVPrac/C++/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  README.md  cmake_install.cmake
(+922 files in other folders)
